# MOTOR-Version-Control-System

./: CMakeLists.txt  README.md
.motor/: index
.motor/refs/heads/: master
include/motor/: compression.h  index.h  motor.h  reference.h  repository.h  utils.h
include/motor/objects/: blob.h  commit.h  object.h  tag.h  tree.h
src/: compression.cpp  index.cpp  main.cpp  reference.cpp  repository.cpp  utils.cpp
src/objects/: blob.cpp  commit.cpp  object.cpp  tag.cpp  tree.cpp
